--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .card {
+        background-color: rgb(3, 29, 48);
+        border: 1px solid grey;
+      
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        border-radius: 2px;
+        transition: all linear 0.3s;
+        transform: rotate3d(0, 1, 0, 180deg);
+        position: relative;
+        overflow: hidden;
+    }
+      
+    .card:hover {
+        cursor: pointer;
+        transform: rotate3d(0, 1, 0, 180deg) translate(-2px, -2px);
+    }
+      
+    .card.flipped {
+        transform: unset;
+        transform-style: preserve-3d;
+    }
+      
+    .backSide {
+        background-color: rgb(3, 29, 48);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+    }
+      
+    .flipped .backSide {
+        transform: rotate3d(0, 1, 0, 180deg);
+    }
+}
